# zwift_racenotes

./: README.md  app,py  app.py  pyproject.toml  test_fit_reader.py
data/: Makuri_Islands__Country_to_Coastal.fit  Watopia__Road_to_Sky.fit  sectors.csv
file_read/: fit_reader.py
