[tool.poetry]
name = "zwift-racenotes"
version = "0.1.0"
description = ""
authors = ["robgriffin247 <robgriffin247@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.38.0"
fitdecode = "^0.10.0"
plotly-express = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
